# Vates-Novel

./: .gitignore  ANDROID_PLAN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: source_spike.rs  tts_spike.rs
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: export.rs  import.rs  lib.rs  main.rs  media.rs  sync.rs  tts.rs
src-tauri/src/sources/: mod.rs  stub.rs
src/components/: DownloadToast.tsx  icons.tsx
src/hooks/: usePlayer.ts
src/lib/: api.ts  db.ts  dictionary.ts  downloads.ts  format.ts  highlight.ts  nativeMedia.ts  nativeTts.ts  platform.ts  segment.ts  settings.ts  sync.ts  updates.ts
src/pages/: BrowsePage.tsx  LibraryPage.tsx  NovelPage.tsx  ReaderPage.tsx  SettingsPage.tsx  SpikePage.tsx  StatisticsPage.tsx
sync-server/: README.md  compose.yaml  package.json  server.js
